fixed header and main compornent is not centered

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -27,7 +27,7 @@
 
   body {
     height: 100vh;
-    width: 95%;
+    width: 100vw;
     margin: 0 auto;
     text-align: center;
     transition: all 0.25s linear 0s;
